--- a/Configs/VRage/config.json
+++ b/Configs/VRage/config.json
@@ -18,7 +18,7 @@
          "fov" : 180
       },
       "AutoCrouch" : {
-         "enabled" : true
+         "enabled" : false
       },
       "AutoPistol" : {
          "enabled" : true
@@ -31,9 +31,9 @@
          "enabled" : false
       },
       "AutoWall" : {
-         "bones" : [ true, false, false, false, false, false ],
+         "bones" : [ true, true, true, true, true, true ],
          "enabled" : true,
-         "value" : 0.10000000149011612
+         "value" : 0.0020000000949949026
       },
       "ErrorMargin" : {
          "enabled" : false,
@@ -66,7 +66,7 @@
       "bone" : 8,
       "enabled" : true,
       "friendly" : false,
-      "silent" : false
+      "silent" : true
    },
    "Airstuck" : {
       "enabled" : false,
@@ -87,12 +87,12 @@
       },
       "Yaw" : {
          "enabled" : true,
-         "type" : 6,
+         "type" : 2,
          "type_fake" : 4
       }
    },
    "AutoAccept" : {
-      "enabled" : false
+      "enabled" : true
    },
    "AutoDefuse" : {
       "enabled" : false
@@ -143,7 +143,7 @@
             "enabled" : false,
             "type" : 0
          },
-         "enabled" : false,
+         "enabled" : true,
          "players_ally_color" : {
             "a" : 1,
             "b" : 0.70351755619049072,
@@ -168,7 +168,7 @@
             "g" : 0.62352943420410156,
             "r" : 0.95294123888015747
          },
-         "type" : 0
+         "type" : 2
       },
       "FOVCrosshair" : {
          "color" : {
@@ -247,8 +247,8 @@
             "r" : 0.70588237047195435
          },
          "duration" : 2000,
-         "enabled" : false,
-         "enemies" : false,
+         "enabled" : true,
+         "enemies" : true,
          "inner_gap" : 5,
          "size" : 16
       },
