Fixed Rage Settings
Fixed Rage Settings

--- a/Configs/VRage/config.json
+++ b/Configs/VRage/config.json
@@ -18,7 +18,7 @@
          "fov" : 180
       },
       "AutoCrouch" : {
-         "enabled" : false
+         "enabled" : true
       },
       "AutoPistol" : {
          "enabled" : true
